@@ -5,17 +5,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import trabalho.dto.CampanhaRequestDTO;
 import trabalho.dto.CampanhaResponseDTO;
-import trabalho.entities.Campanha;
-import trabalho.entities.Fornecedor;
-import trabalho.entities.Produto;
+import trabalho.enums.TipoCampanha;
 import trabalho.mapper.CampanhaMapper;
 import trabalho.repository.CampanhaRepository;
 import trabalho.repository.FornecedorRepository;
-import trabalho.repository.ProdutoRepository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,29 +19,19 @@ public class CampanhaService {
 
     private final CampanhaRepository campanhaRepository;
     private final FornecedorRepository fornecedorRepository;
-    private final ProdutoRepository produtoRepository;
     private final CampanhaMapper campanhaMapper;
 
     @Transactional
     public CampanhaResponseDTO criarCampanha(CampanhaRequestDTO dto) {
 
-        Campanha campanha = campanhaMapper.toEntity(dto);
-
-        // fornecedor obrigatório
-        Fornecedor fornecedor = fornecedorRepository.findById(dto.fornecedorId())
+        var fornecedor = fornecedorRepository.findById(dto.fornecedorId())
                 .orElseThrow(() -> new RuntimeException("Fornecedor não encontrado."));
+
+        var campanha = campanhaMapper.toEntity(dto);
         campanha.setFornecedor(fornecedor);
-
-        // produto brinde opcional
-        if (dto.produtoIdBrinde() != null) {
-            Produto produto = produtoRepository.findById(dto.produtoIdBrinde())
-                    .orElseThrow(() -> new RuntimeException("Produto de brinde não encontrado."));
-            campanha.setProdutoIdBrinde(produto);
-        }
-
         campanha.setAtivo(true);
 
-        Campanha salva = campanhaRepository.save(campanha);
+        var salva = campanhaRepository.save(campanha);
         return campanhaMapper.toResponseDTO(salva);
     }
 
@@ -53,57 +39,68 @@ public class CampanhaService {
     public List<CampanhaResponseDTO> listarCampanhas() {
         return campanhaRepository.findAll().stream()
                 .map(campanhaMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<CampanhaResponseDTO> listarAtivas() {
+        return campanhaRepository.findByAtivoTrue().stream()
+                .map(campanhaMapper::toResponseDTO)
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<CampanhaResponseDTO> buscarPorNome(String nome) {
+        return campanhaRepository.findByNomeContainingIgnoreCase(nome)
+                .stream()
+                .map(campanhaMapper::toResponseDTO)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public CampanhaResponseDTO buscarPorId(UUID id) {
-        Campanha campanha = campanhaRepository.findById(id)
+        var campanha = campanhaRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Campanha não encontrada."));
         return campanhaMapper.toResponseDTO(campanha);
     }
 
     @Transactional
-    public CampanhaResponseDTO atualizarCampanha(UUID id, CampanhaRequestDTO dto) {
+    public CampanhaResponseDTO atualizar(UUID id, CampanhaRequestDTO dto) {
 
-        Campanha campanha = campanhaRepository.findById(id)
+        var campanha = campanhaRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Campanha não encontrada."));
 
+        // atualiza apenas os campos enviados
         campanha.setNome(dto.nome());
-        campanha.setTipo(dto.tipo());
+        campanha.setTipo(dto.tipo()); //arrumar
         campanha.setValorMinimoCompra(dto.valorMinimoCompra());
         campanha.setCashbackValor(dto.cashbackValor());
+        campanha.setProdutoIdBrinde(dto.produtoIdBrinde());
         campanha.setQuantidadeMinimaProduto(dto.quantidadeMinimaProduto());
         campanha.setBrindeDescricao(dto.brindeDescricao());
         campanha.setPercentualDesconto(dto.percentualDesconto());
         campanha.setDataInicio(dto.dataInicio());
         campanha.setDataFim(dto.dataFim());
 
-        // atualizar fornecedor se mudar
-        if (!campanha.getFornecedor().getId().equals(dto.fornecedorId())) {
-            Fornecedor fornecedor = fornecedorRepository.findById(dto.fornecedorId())
+        // se o fornecedor foi alterado, atualiza relação
+        if (dto.fornecedorId() != null &&
+                !campanha.getFornecedor().getId().equals(dto.fornecedorId())) {
+
+            var fornecedor = fornecedorRepository.findById(dto.fornecedorId())
                     .orElseThrow(() -> new RuntimeException("Fornecedor não encontrado."));
             campanha.setFornecedor(fornecedor);
         }
 
-        // atualizar brinde
-        if (dto.produtoIdBrinde() != null) {
-            Produto produto = produtoRepository.findById(dto.produtoIdBrinde())
-                    .orElseThrow(() -> new RuntimeException("Produto de brinde não encontrado."));
-            campanha.setProdutoIdBrinde(produto);
-        } else {
-            campanha.setProdutoIdBrinde(null);
-        }
-
-        Campanha atualizada = campanhaRepository.save(campanha);
-        return campanhaMapper.toResponseDTO(atualizada);
+        var salva = campanhaRepository.save(campanha);
+        return campanhaMapper.toResponseDTO(salva);
     }
 
     @Transactional
-    public void deletarCampanha(UUID id) {
+    public void deletar(UUID id) {
         if (!campanhaRepository.existsById(id)) {
             throw new RuntimeException("Campanha não encontrada.");
         }
         campanhaRepository.deleteById(id);
     }
 }
+
